localk8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    prometheus.io/port: "10254"
    prometheus.io/scrape: "true"
  labels:
    app: example
  name: example
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: foo
            port:
              number: 8000
        path: /foo
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: bar
            port:
              number: 8000
        path: /bar
        pathType: Prefix
